[package]
name = "bmk"
version = "0.1.0"
edition = "2021"
description = "Bookmark paths and jump to them with ease"
categories = ["development-tools", "productivity-tools", "command-line-utilities"]
readme = "README.md"
repository = "https://github.com/elasticrash/bookmark-paths"
keywords = ["path", "manage"]
authors = ["Stefanos Kouroupis <s.kouroupis@voidmachines.com>"]
license = "MIT"

[[bin]]
name = "bmk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
dirs = "5.0.1"
